--- a/app/html_components/_list-noMenu.html
+++ b/app/html_components/_list-noMenu.html
@@ -1,4 +1,4 @@
-<ul class="list list_menu">
+<ul class="list list_no-menu">
     <li class="list__item list__item_menu">
         <div class="list__icon">
             <svg class="icon icon_menu">
