--- a/app/html_components/_header.html
+++ b/app/html_components/_header.html
@@ -1,30 +1,28 @@
 <header class="header">
-	<nav class="nav">
-		<ul class="list list_nav">
-			<li class="list__item">
-				<a href="#" class="link">Обо мне</a>
-			</li>
-			<li class="list__item">
-				<a href="#" class="link">Обо мне</a>
-			</li>
-			<li class="list__item">
-				<a href="#" class="link">Обо мне</a>
-			</li>
-		</ul>
-	</nav>
-	<a class="logo" href="index.html">
-		<span>ИСПАНСКИЕ РЕЦЕПТЫ</span>
-		<span>recetas españolas</span>
-	</a>
-	<div class="header__menu" aria-expanded="false" role="navigation">
-		<div>
-			@@include('_category-main.html')
-			<div>
-				<svg viewBox="0 0 10 10">
-					<use xlink:href="img/sprite.svg#arrow-menu"></use>
-				</svg>
+	<div class="container container_header">
+		<nav class="nav nav_header">
+			<ul class="list list_nav">
+				<li class="list__item">
+					<a href="about.html" class="link link_main">Обо мне</a>
+				</li>
+				<li class="list__item">
+					<a href="about.html" class="link link_main">Обо мне</a>
+				</li>
+				<li class="list__item">
+					<a href="about.html" class="link link_main">Обо мне</a>
+				</li>
+			</ul>
+		</nav>
+		<div class="container container_logo">
+			<a class="link link_logo" href="index.html">ИСПАНСКИЕ РЕЦЕПТЫ</a>
+			<span>recetas españolas</span>
+		</div>
+		<div class="header__menu" aria-expanded="false" role="navigation">
+			<div class="header__popup">
+				@@include('_list-menu.html')
 			</div>
-			рецепты & рецепты
+			<span class="header__name">Меню</span>
 		</div>
 	</div>
+	<div class="body__back"></div>
 </header>
