--- a/app/index.html
+++ b/app/index.html
@@ -9,147 +9,37 @@
 	<body class="body">
 		@@include('html_components/_header.html')
 		<h1 class="title title_h1">Испанские рецепты</h1>
-		<main class="main">
-			<div class="container container_main">
-				<section class="last">
-					<h2 class="title title_h2">ПОСЛЕДНИЕ ПОСТЫ</h2>
-					<article class="last__item">
-						<div class="last__photo">
-							<div class="last__meta">
-								<span class="last__category">Десерты</span>
-								<span class="last__date">Июль 18, 2021г.</span>
-							</div>
-							<img src="img/last1-320.jpg" alt="">
-							<div class="last__likes">
-								<span class="last__like">15</span>
-								<span class="last__comment">6</span>
-							</div>
-						</div>
-						<div class="last__info">
-							<h3 class="title title_h3">Флан (flan cacero)</h3>
-							<div class="last__kcal">
-								<span class="last__time">минут</span>
-								<span class="last__time">ккал</span>
-							</div>
-							<p class="last__text">Были в Испании времена, когда это простое блюдо было королем в меню ресторанов Испании. В дальнейшем этот скромный десерт был изменен и дополнен шеф-поварами лучших ресторанов Испании. Кто-то заменял молоко на сливки или на их смесь. [...]</p>
-						</div>
-						<a href="#" class="link link_gen">ПРОДОЛЖИТЬ ЧТЕНИЕ</a>
-					</article>
-					<article class="last__item">
-						<div class="last__photo">
-							<div class="last__meta">
-								<span class="last__category">Десерты</span>
-								<span class="last__date">Июль 18, 2021г.</span>
-							</div>
-							<img src="img/last1-320.jpg" alt="">
-							<div class="last__likes">
-								<span class="last__like">15</span>
-								<span class="last__comment">6</span>
-							</div>
-						</div>
-						<div class="last__info">
-							<h3 class="title title_h3">Мифы и легенды валенсийской паэльи: что правда, а что фольклор и как приготовить отличную паэлью</h3>
-							<div class="last__kcal">
-								<span class="last__time">минут</span>
-								<span class="last__time">ккал</span>
-							</div>
-							<p class="last__text">Согласно словарю Королевской Академии Испанского языка - паэлья это "блюдо из сухого риса с мясом, рыбой, морепродуктами, овощами и т.д. типичное для региона Валенсия, в Испании". [...]  </p>
-						</div>
-						<a href="#" class="link link_gen">ПРОДОЛЖИТЬ ЧТЕНИЕ</a>
-					</article>
-					<article class="last__item">
-						<div class="last__photo">
-							<div class="last__meta">
-								<span class="last__category">Десерты</span>
-								<span class="last__date">Июль 18, 2021г.</span>
-							</div>
-							<img src="img/last1-320.jpg" alt="">
-							<div class="last__likes">
-								<span class="last__like">15</span>
-								<span class="last__comment">6</span>
-							</div>
-						</div>
-						<div class="last__info">
-							<h3 class="title title_h3">Испанский гаспачо (Gazpacho andaluz)</h3>
-							<div class="last__kcal">
-								<span class="last__time">минут</span>
-								<span class="last__time">ккал</span>
-							</div>
-							<p class="last__text">Когда приходит жаркое время года, нет ничего лучше чтобы начать обед, чем тарелочка холодного испанского супа Гаспачо (Gazpacho). Гаспачо - традиционное блюдо юга Испании.  Конечно же есть много разновидностей Гаспачо, [...] </p>
-						</div>
-						<a href="#" class="link link_gen">ПРОДОЛЖИТЬ ЧТЕНИЕ</a>
-					</article>
-				</section>
-			</div>
-		</main>
-		<aside class="aside">
-			<section class="about">
-				<h2 class="title title_h2">Hola!  /  Привет!</h2>
-				<p class="about__text">Меня зовут Илья и я начал этот блог потому что хочу собрать и сохранить рецепты многочисленных регионов Испании, которые называют Испанская кухня.
-				</p>
-				<img src="img/about-320.jpg" alt="">
-				<a href="#" class="link link_gen">ПОДРОБНЕЕ</a>
-			</section>
-			<section class="search">
-				<h2 class="title title_h2">НАЙДИТЕ ИДЕАЛЬНЫЙ РЕЦЕПТ:</h2>
-				<form action="action.php" class="form">
-					<input type="text" class="form__input" placeholder="Введите ключевые слова...">
-					<button class="button" type="submit">ПОИСК</button>
-				</form>
-			</section>
-			<section class="alpha">
-				<h2 class="title title_h2">ПОИСК ПО АЛФАВИТУ:</h2>
-				<ul class="list">
-					<li class="list__item"><a href="#" class="link">ГАСПАЧО</a></li>
-					<li class="list__item"><a href="#" class="link">КАРПАЧО ИЗ КАБАЧКОВ</a></li>
-					<li class="list__item"><a href="#" class="link">ФЛАН</a></li>
-					<li class="list__item"><a href="#" class="link">ГАСПАЧО</a></li>
-					<li class="list__item"><a href="#" class="link">ГАСПАЧО</a></li>
-					<li class="list__item"><a href="#" class="link">ГАСПАЧО</a></li>
-				</ul>
-			</section>
-			<section class="new">
-				<h2 class="title title_h2">НОВЫЕ РЕЦЕПТЫ:</h2>
-				<ul class="list">
-					<li class="list__item">
-						<img src="img/new1-320.jpg" alt="">
-						<div class="new__info">
-							<h3 class="title title_h3">Флан (flan cacero)</h3>
-							<span class="new__date">27 августа 2021г.</span>
-						</div>
-					</li>
-					<li class="list__item">
-						<img src="img/new2-320.jpg" alt="">
-						<div class="new__info">
-							<h3 class="title title_h3">Мифы и легенды валенсийской паэльи</h3>
-							<span class="new__date">27 августа 2021г.</span>
-						</div>
-					</li>
-					<li class="list__item">
-						<img src="img/new3-320.jpg" alt="">
-						<div class="new__info">
-							<h3 class="title title_h3">Испанский салат с арбузными дольками </h3>
-							<span class="new__date">27 августа 2021г.</span>
-						</div>
-					</li>
-				</ul>
-			</section>
-			<section class="tags">
-				<h2 class="title title_h2">#ТЕГИ:</h2>
-				<div class="tags__items">
-					<span class="tags__item">#Ресторан —</span>
-					<span class="tags__item">#Молоко —</span>
-					<span class="tags__item">#Витамин_С —</span>
-					<span class="tags__item">#Фрукты —</span>
-					<span class="tags__item">#Кофе —</span>
-					<span class="tags__item">#Пирог —</span>
-					<span class="tags__item">#Маски —</span>
+		<div class="container container_body">
+			<main class="main">
+				<div class="container container_main">
+					<section class="today">
+						<span class="today__title">#Сегодня читают ></span>
+						<span class="today__tag">#тэги</span>
+						<span class="today__tag">#тэги</span>
+						<span class="today__tag">#тэги</span>
+					</section>
+					<section class="last">
+						<h2 class="title title_h2">ПОСЛЕДНИЕ ПОСТЫ</h2>
+						@@include('html_components/_article_main.html')
+						@@include('html_components/_article_main.html')
+					</section>
 				</div>
-			</section>
-		</aside>
-		<footer class="footer">
-			<span class="footer__text">2021 Испанские рецепты</span>
-			<span class="footer__text">Все права защищены.</span>
-		</footer>
+			</main>
+			<aside class="aside">
+				<div class="container container_aside">
+					@@include('html_components/_about.html')
+					@@include('html_components/_search.html')
+					<section class="category">
+						<h2 class="title title_h2">КАТЕГОРИИ:</h2>
+						@@include('html_components/_list-noMenu.html')
+					</section>
+					@@include('html_components/_alpha.html')
+					@@include('html_components/_new.html')
+					@@include('html_components/_tags.html')
+				</div>
+			</aside>
+		</div>
+		@@include('html_components/_footer.html')
 	</body>
+	<script src="js/script.js"></script>
 </html>
