--- a/app/flan.html
+++ b/app/flan.html
@@ -16,7 +16,7 @@
 					<section class="ingredients">
 						<h2 class="title title_h2">ИНГРЕДИЕНТЫ:</h2>
 						<p class="form form_ingredients">
-							<select name="persons" id="person-select">
+							<select class="form__select form__select_ingredients" name="persons" id="person-select">
 								<option value="1">1</option>
 								<option value="2">2</option>
 								<option value="3">3</option>
@@ -55,7 +55,11 @@
 							<li class="list__item list__item_prep">
 								<span class="prep__number">1</span>
 								<p class="prep__text">Нагреваем молоко с корицей и кожей лимона. Когда начнет закипать, убираем с огня и даем остыть в течение 30 минут.</p>
-								<img src="img/prep1-320.jpg" alt="" class="img img_prep">
+								<picture>
+									<source srcset="img/prep1-320.avif 768w, img/prep1-768.avif 1440w, img/prep1-1440.avif 1900w" sizes="100vw" type="image/avif">
+									<source srcset="img/prep1-320.webp 768w, img/prep1-768.webp 1440w, img/prep1-1440.webp 1900w" sizes="100vw" type="image/webp">
+									<img srcset="img/prep1-320.jpg 768w, img/prep1-768.jpg 1440w, img/prep1-1440.jpg 1900w" src="img/prep1-320.jpg" alt="" class="img img_prep">
+								</picture>
 							</li>
 							<li class="list__item list__item_prep">
 								<span class="prep__number">2</span>
@@ -69,7 +73,11 @@
 							<li class="list__item list__item_prep">
 								<span class="prep__number">3</span>
 								<p class="prep__text">Далее приготовим карамель. В кастрюлю поместим 4 столовых ложки сахара и такое же количество воды. На тихом огне доведем до кипения. Должна получится коричневая жидкость. Заливаем в формочки для флана, чтобы немного покрыть дно формочек. Затем неспеша заливаем наш крем. Формочки ставим на поднос с высокими бортами чтобы можно было залить водой, примерно с палец глубиной.</p>
-								<img src="img/prep2-320.jpg" alt="" class="img img_prep">
+								<picture>
+									<source srcset="img/prep2-320.avif 768w, img/prep2-768.avif 1440w, img/prep2-1440.avif 1900w" sizes="100vw" type="image/avif">
+									<source srcset="img/prep2-320.webp 768w, img/prep2-768.webp 1440w, img/prep2-1440.webp 1900w" sizes="100vw" type="image/webp">
+									<img srcset="img/prep2-320.jpg 768w, img/prep2-768.jpg 1440w, img/prep2-1440.jpg 1900w" src="img/last1-320.jpg" src="img/prep2-320.jpg" alt="" class="img img_prep">
+								</picture>
 							</li>
 							<li class="list__item list__item_prep">
 								<span class="prep__number">4</span>
@@ -84,12 +92,48 @@
 					<section class="share">
 						<h2 class="title title_h2">ПОДЕЛИТЬСЯ РЕЦЕПТОМ:</h2>
 						<ul class="list list_share">
-							<li class="list__item"><a href="#" class="link link_share"></a></li>
-							<li class="list__item"><a href="#" class="link link_share"></a></li>
-							<li class="list__item"><a href="#" class="link link_share"></a></li>
-							<li class="list__item"><a href="#" class="link link_share"></a></li>
-							<li class="list__item"><a href="#" class="link link_share"></a></li>
-							<li class="list__item"><a href="#" class="link link_share"></a></li>
+							<li class="list__item">
+								<a href="#" class="link link_share">
+									<svg class="icon icon_share">
+										<use xlink:href="img/sprite.svg#facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="list__item">
+								<a href="#" class="link link_share">
+									<svg class="icon icon_share">
+										<use xlink:href="img/sprite.svg#instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="list__item">
+								<a href="#" class="link link_share">
+									<svg class="icon icon_share">
+										<use xlink:href="img/sprite.svg#vk"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="list__item">
+								<a href="#" class="link link_share">
+									<svg class="icon icon_share">
+										<use xlink:href="img/sprite.svg#pinterest"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="list__item">
+								<a href="#" class="link link_share">
+									<svg class="icon icon_share">
+										<use xlink:href="img/sprite.svg#whatsapp"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="list__item">
+								<a href="#" class="link link_share">
+									<svg class="icon icon_share">
+										<use xlink:href="img/sprite.svg#telegram"></use>
+									</svg>
+								</a>
+							</li>
 						</ul>
 					</section>
 					@@include('html_components/_comments.html')
