--- a/app/html_components/_search.html
+++ b/app/html_components/_search.html
@@ -2,6 +2,6 @@
 	<h2 class="title title_h2">НАЙДИТЕ ИДЕАЛЬНЫЙ РЕЦЕПТ:</h2>
 	<form action="action.php" class="form">
 		<input type="text" class="form__input" placeholder="Введите ключевые слова...">
-		<button class="button button_input" type="submit">ПОИСК</button>
+		<button class="button button_input" type="submit">Поиск</button>
 	</form>
 </section>
