--- a/app/html_components/_header.html
+++ b/app/html_components/_header.html
@@ -1,15 +1,17 @@
 <header class="header">
 	<div class="container container_header">
-		<div class="header__menu" aria-expanded="false" role="navigation">
-			<div class="header__popup">
-				@@include('_list-menu.html')
-			</div>
-			<span class="header__name">Меню</span>
-		</div>
+		<nav class="nav">
+			<button class="button button_nav" type="button" aria-expanded="false" aria-controls="list_menu">
+			<svg class="icon icon_menu" aria-hidden="true">
+				<use class="icon_burger" xlink:href="img/sprite.svg#burger"></use>
+				<use class="icon_cross" xlink:href="img/sprite.svg#cross"></use>
+			</svg>
+			</button>
+			@@include('_list-menu.html')
+		</nav>
 		<div class="container container_logo">
 			<a class="link link_logo" href="index.html">ИСПАНСКИЕ РЕЦЕПТЫ</a>
 			<span>recetas españolas</span>
 		</div>
 	</div>
-	<div class="body__back"></div>
 </header>
